button squish fix

--- a/src/screens/Game/Game.module.css
+++ b/src/screens/Game/Game.module.css
@@ -48,6 +48,10 @@
     background-color: #8c44d3;
 }
 
+.userActionBtn + .userActionBtn {
+    margin-top: 10px;
+}
+
 @media screen and (max-width: 970px) {
 
     .userActionBtn + .userActionBtn {
